[project]
name = "fastgedcom"
version = "0.0.7"
description = "A lightweight tool to parse, browse and edit gedcom files."
keywords = ["fastgedcom", "gedcom", "parser", "genealogy"]
authors = [
	{name="Gatien Bouyer", email="gatien.bouyer.dev@gmail.com"},
]
readme = "README.md"
license = {text = "MIT License"}
requires-python = ">=3.10" 
dependencies = [
	"ansel>=1.0.0",
]
classifiers = [
	"License :: OSI Approved :: MIT License",
	"Programming Language :: Python :: 3.10",
	"Programming Language :: Python :: 3.11",
	"Topic :: Sociology :: Genealogy",
	"Intended Audience :: Developers",
	"Operating System :: OS Independent",
	"Development Status :: 3 - Alpha",
]

[project.urls]
"Bug Tracker" = "https://github.com/GatienBouyer/fastgedcom/issues"
"Source" = "https://github.com/GatienBouyer/fastgedcom"
"Documentation" = "https://fastgedcom.readthedocs.io/en/latest/"

[project.optional-dependencies]
dev = [
	"mypy",
	"build",
	"twine",
	"sphinx-rtd-theme",
	"sphinx-autoapi",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
