[project]
name = "fastgedcom"
version = "1.1.0"
description = "A lightweight tool to parse, browse and edit gedcom files."
keywords = ["fastgedcom", "gedcom", "parser", "genealogy"]
authors = [
	{name="Gatien Bouyer", email="gatien.bouyer.dev@gmail.com"},
]
readme = "README.md"
license = {text = "MIT License"}
requires-python = ">=3.10"
dependencies = [
]
classifiers = [
	"License :: OSI Approved :: MIT License",
	"Programming Language :: Python :: 3.10",
	"Programming Language :: Python :: 3.11",
	"Programming Language :: Python :: 3.12",
	"Topic :: Sociology :: Genealogy",
	"Intended Audience :: Developers",
	"Operating System :: OS Independent",
	"Development Status :: 5 - Production/Stable",
]

[project.urls]
"Bug Tracker" = "https://github.com/GatienBouyer/fastgedcom/issues"
"Source" = "https://github.com/GatienBouyer/fastgedcom"
"Documentation" = "https://fastgedcom.readthedocs.io/en/latest/"

[project.optional-dependencies]
dev = [
	"mypy",
	"isort",
	"autopep8",
	"build",
	"twine",
	"sphinx-rtd-theme",
	"sphinx-autoapi",
]
ansel = [
	"ansel>=1.0.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.isort]
multi_line_output = 5
force_to_top = "typing"

[tool.autopep8]
max_line_length = 120
